# FBE

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Readme.md  pkg-dependency.sh
.github/workflows/: golang.yml  linux-clang.yml  linux-gcc.yml  linux.yml  macos-clang.yml
documents/: FBE.md
include/: fbe.h  generator.h  generator.inl  generator_cpp.h  generator_cpp_fixture.h  generator_csharp.h  generator_go.h  generator_java.h  generator_javascript.h  generator_kotlin.h  generator_python.h  generator_ruby.h  generator_swift.h  version.h
licenses/: header.txt  licensing.py
optparse/: optparse.cc  optparse.hpp
performance/: benchmark_arena_modes.cpp
projects/CSharp/Proto/: com.chronoxor.enums.cs  com.chronoxor.proto.cs  fbe.cs  osa.cs  variants.cs
projects/Go/: .gitignore  Makefile  go.mod  go.sum  main.go
projects/Go/benchmarks/: send_receive_test.go  serialization_final_test.go  serialization_json_test.go  serialization_test.go
projects/Go/examples/: create.go  examples_test.go  print.go  print_json.go  send_receive.go  serialization.go  serialization_final.go  serialization_json.go
projects/Go/proto/enums/: EnumByte.go  EnumChar.go  EnumInt16.go  EnumInt32.go  EnumInt64.go  EnumInt8.go  EnumUInt16.go  EnumUInt32.go  EnumUInt64.go  EnumUInt8.go  EnumWChar.go  Enums.go  EnumsFinalModel.go  EnumsModel.go  FieldModelEnumByte.go  FieldModelEnumChar.go  FieldModelEnumInt16.go  FieldModelEnumInt32.go  FieldModelEnumInt64.go  (+24 more)
projects/Go/tests/: clone_test.go  create_test.go  decimal_test.go  enums_test.go  extending_test.go  send_receive_final_test.go  send_receive_test.go  serialization_final_test.go  serialization_json_test.go  serialization_test.go
projects/JavaScript/proto/: osa.js  variants.js
projects/Python/proto/: osa.py  proto.py  protoex.py  variants.py
projects/Ruby/examples/: serialization_final.rb
projects/Ruby/proto/: osa.rb  proto.rb  protoex.rb  variants.rb
proto/: arena.cpp  arena.fbe  arena.h  arena_common.cpp  arena_common.fbe  arena_common.h  arena_common_final_models.cpp  arena_common_final_models.h  arena_common_final_pmr_models.cpp  arena_common_final_pmr_models.h  arena_common_json.h  arena_common_models.cpp  arena_common_models.h  arena_common_pmr.cpp  arena_common_pmr.h  arena_common_pmr_models.cpp  arena_common_pmr_models.h  arena_common_protocol.cpp  arena_common_protocol.h  arena_final_models.cpp  arena_final_models.h  arena_final_pmr_models.cpp  arena_final_pmr_models.h  arena_models.cpp  arena_models.h  arena_pmr.cpp  arena_pmr.h  arena_pmr_models.cpp  arena_pmr_models.h  arena_ptr_ptr.cpp  arena_ptr_ptr.h  arena_ptr_ptr_models.cpp  arena_ptr_ptr_models.h  arena_ptr_ptr_pmr.cpp  arena_ptr_ptr_pmr.h  arena_ptr_ptr_pmr_models.cpp  arena_ptr_ptr_pmr_models.h  cpp_only.cpp  cpp_only.fbe  cpp_only.h  (+195 more)
ptr_proto/: arena_ptr.fbe  cross_pkg_variant.fbe  extra.fbe  pkg.fbe  ptrpkg.fbe  sa.fbe  simple.fbe  template_variant.fbe  variants_ptr.fbe
smoke_tests/: .clang-format  CMakeLists.txt  smoke_normal.cc  smoke_normal.fbe  smoke_normal_final.cc  smoke_normal_pmr.cc  smoke_ptr.cc  smoke_ptr.fbe  smoke_ptr_pmr.cc
source/: fbe.cpp  fbe.l  fbe.y  generator.cpp  generator_cpp.cpp  generator_cpp.inl  generator_csharp.cpp  generator_go.cpp  generator_java.cpp  generator_javascript.cpp  generator_kotlin.cpp  generator_python.cpp  generator_ruby.cpp  generator_swift.cpp
tests/: test.cpp  test.h  test_arena.cpp  test_benchmark.cpp  test_clone.cpp  test_create.cpp  test_decimal.cpp  test_enums.cpp  test_extending.cpp  test_send_receive.cpp  test_send_receive_final.cpp  test_serialization.cpp  test_serialization_final.cpp  test_serialization_json.cpp  test_serialization_ptr.cpp  test_utils.cpp
(+821 files in other folders)
